# cdk-snapshots

./: BUGS  CHANGES  COPYING  COPYING.asc  EXPANDING  INSTALL  Makefile.in  NOTES  README  TODO  VERSION  aclocal.m4  alphalist.c  binding.c  button.c  buttonbox.c  calendar.c  cdk-4.9.10.lsm  cdk-4.9.11.lsm  cdk-4.9.8.lsm  cdk-config.in  cdk.c  cdk.spec  cdk_compat.c  cdk_display.c  cdk_objs.c  cdk_params.c  cdkscreen.c  configure  configure.in  debug.c  dialog.c  draw.c  entry.c  fscale.c  fselect.c  gen-pkgconfig.in  gen-scale.awk  gen-scale.c  gen-scale.sh  (+31 more)
c++/: cdkscreen.h
cli/: Makefile.in  cdkalphalist.c  cdkcalendar.c  cdkdialog.c  cdkentry.c  cdkfselect.c  cdkitemlist.c  cdklabel.c  cdkmatrix.c  cdkmentry.c  cdkradio.c  cdkscale.c  cdkscroll.c  cdkselection.c  cdkslider.c  cdktemplate.c  cdkviewer.c
cli/samples/: alphalist.sh  calendar.sh  dialog.sh  entry.sh  fselect.sh  itemlist.sh  label.sh  matrix.sh  mentry.sh  radio.sh  scale.sh  scroll.sh  selection.sh  slider.sh  template.sh  viewer.sh
cli/utils/: adduser  netconfig
demos/: Makefile  Makefile.in  appointment.c  clock.c  command.c  fileview.c  rolodex.c  rolodex.h  serial.c  stopSign.c  syb.c  vinstall.c
examples/: Makefile  Makefile.in  alphalist_ex.c  bind_ex.c  buttonbox_ex.c  calendar_ex.c  cdkscreen_ex.c  dialog_ex.c  entry_ex.c  fscale_ex.c  fselect_ex.c  fslider_ex.c  graph_ex.c  hello_ex.c  histogram_ex.c  itemlist_ex.c  label_ex.c  lowerCDKObject_ex.c  marquee_ex.c  matrix_ex.c  mentry_ex.c  mentry_ex2.c  menu_ex.c  position_ex.c  preprocess_ex.c  radio1_ex.c  radio_ex.c  raiseCDKObject_ex.c  scale_ex.c  scroll_ex.c  scroll_ex2.c  selection_ex.c  slider_ex.c  subwindow_ex.c  swindow_ex.c  template_ex.c  traverse_ex.c  tst.c  uslider_ex.c  viewer_ex.c  (+2 more)
include/: alphalist.h  binding.h  button.h  buttonbox.h  calendar.h  cdk.h  cdk_compat.h  cdk_int.h  cdk_objs.h  cdk_params.h  cdk_test.h  cdk_util.h  cdk_version.hin  cdkscreen.h  config.hin  curdefs.h  dialog.h  draw.h  entry.h  fscale.h  fselect.h  gen-scale.h  gen-slider.h  graph.h  histogram.h  itemlist.h  label.h  marquee.h  matrix.h  mentry.h  menu.h  radio.h  scale.h  scroll.h  scroller.h  selection.h  slider.h  swindow.h  template.h  traverse.h  (+1 more)
man/: cdk.3  cdk5-config.1  cdk_alphalist.3  cdk_binding.3  cdk_button.3  cdk_buttonbox.3  cdk_calendar.3  cdk_compat.3  cdk_dialog.3  cdk_display.3  cdk_draw.3  cdk_entry.3  cdk_fscale.3  cdk_fselect.3  cdk_graph.3  cdk_histogram.3  cdk_itemlist.3  cdk_label.3  cdk_marquee.3  cdk_matrix.3  cdk_mentry.3  cdk_menu.3  cdk_misc.3  cdk_objs.3  cdk_params.3  cdk_position.3  cdk_process.3  cdk_radio.3  cdk_scale.3  cdk_screen.3  cdk_scroll.3  cdk_selection.3  cdk_slider.3  cdk_swindow.3  cdk_template.3  cdk_traverse.3  cdk_util.3  cdk_viewer.3  gen-scale.3  gen-slider.3  (+1 more)
package/: cdk.map  cdk.spec  cdk.sym  mingw-cdk.nsi  mingw-cdk.spec
package/debian/: changelog  control  copyright  libcdk5-dev.lintian-overrides  libcdk5-doc.lintian-overrides  libcdk5.lintian-overrides  rules  watch
package/debian-mingw/: changelog  control  copyright  rules  watch
package/debian-mingw64/: changelog  control  copyright  rules  watch
package/freebsd/: Makefile  pkg-descr
package/pkgsrc/: Makefile  PLIST  distinfo
